fix horizontal image overflow for images on mobile

--- a/client/styles/Image.css
+++ b/client/styles/Image.css
@@ -3,3 +3,9 @@
     max-height: 250px;
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 1000px) {
+    .image-container {
+        max-width: 250px;
+    }
+}
